# product-socialhub-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/socialhub_mcp/: __init__.py  client.py  server.py
src/socialhub_mcp/tools/: __init__.py  accounts.py  posts.py  usage.py
tests/: __init__.py  conftest.py  test_tools.py
